# yoni

./: .gitignore  MANDATORY.md  README.md  main.py  pyproject.toml  system_prompt.py
.cursor/rules/: docs-conventions.mdc  yoni-ai-operations.mdc  yoni-core.mdc  yoni-repository.mdc  yoni-spec-authoring.mdc
config/: env.py  langchain.py
plugins/: __init__.py
plugins/vscode-yoni/: .pnp.cjs  DEV.md  README.md  language-configuration.json  package.json
plugins/yoni_lsp/: __init__.py  __main__.py  ranges.py  server.py
tests/: test_generator.py  test_graph.py  test_graph_store.py  test_impact.py  test_normalizer.py  test_parser_blocks.py  test_parser_constraint.py  test_parser_entity.py  test_parser_expressions.py  test_parser_intent.py  test_parser_migration.py  test_parser_query.py  test_parser_rule.py  test_parser_sections.py  test_parser_spans.py  test_parser_test.py  test_parser_view.py  test_pipeline.py  test_planner.py  test_validator.py
tests/fixtures/: action_send_email.yoni  capability_email.yoni  constraint_email_unique.yoni  deployment_prod.yoni  domain_customer.yoni  entity_customer.yoni  error_customer_not_found.yoni  event_invoice_paid.yoni  intent_create_invoice.yoni  migration_customer_v2.yoni  project_billing.yoni  query_active_customers.yoni  rule_adult.yoni  state_invoice_status.yoni  test_create_invoice.yoni  view_customer_list.yoni  workflow_onboarding.yoni
yoni/: __init__.py  __main__.py  compile.py  diagnostics.py  errors.py  pipeline.py
yoni/ast/: __init__.py  action.py  base.py  block_base.py  capability.py  constraint.py  deployment.py  domain.py  entity.py  error.py  event.py  expr.py  intent.py  migration.py  project.py  query.py  rule.py  state.py  test.py  types.py  view.py  workflow.py
yoni/generator/: __init__.py  cli.py  errors.py  execute.py  manifest.py  models.py  order.py  paths.py  plans.py  queue.py  run.py  scope.py  session.py  templates.py  verify.py
yoni/grammar/: __init__.py  expressions.lark  yoni.lark
yoni/graph/: __init__.py  builder.py  models.py  (+1 more)
(+188 files in other folders)
