[project]
name = "Yoni_dervice_coding"
version = "0.1.0"
description = "From One, Everything Emerges. A coding language built for just LLM Programing"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "chromadb>=1.5.9",
    "faker>=40.23.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "lark>=1.3.1",
    "networkx>=3.4.2",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "sympy>=1.14.0",
    "tavily-python>=0.7.26",
]

[dependency-groups]
dev = [
    "lsprotocol>=2025.0.0",
    "pre-commit>=4.6.0",
    "pygls>=2.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.17",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["yoni*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
